# Fake-news-detection

./: .env.example  clean_comments.py  nb_cells.json  nb_content.txt  pyproject.toml  requirements.txt
change_logs/: 2026-04-16_slm_finetune_changes.md
dataset/: preprocess_twitter15_16.ipynb  twitter15_16.csv  twitter15_16_preprocessed.csv
notebooks/: DEMO_MRCD.ipynb  MRCDftt-tw1516.ipynb  github-mrcd-tw1516 26042026.ipynb  kaggle_deploy.ipynb  mrcd-ftt (20).ipynb  mrcd-ftt.ipynb  mrcd-src-test-clean.ipynb  mrcd-src-test.ipynb  mrcd-tw1516.ipynb  roberta-finetuning-tw1516-v1.ipynb  roberta-finetuning-tw1516-v2.ipynb  run_mrcd.ipynb  slm_vs_mrcd_120_80.ipynb  test_modules.ipynb
src/: __init__.py  config.py  labels.py  prompts.py  utils.py
src/evaluation/: __init__.py  metrics.py
src/llm/: __init__.py  base.py  handler.py
src/pipeline/: __init__.py  evidence.py  finetune.py  runner.py  selection.py
src/retrieval/: __init__.py  demo_retrieval.py  knowledge_agent.py  knowledge_retrieval.py
src/slm/: __init__.py  dataset.py  model.py
tests/: test_config.py  test_demo_retrieval.py  test_evaluation.py  test_evidence.py  test_knowledge_agent.py  test_knowledge_retrieval.py  test_labels.py  test_pipeline.py  test_prompts.py  test_utils.py
