[project]
name = "mrcd"
version = "0.1.0"
description = "MRCD - Multi-Round Collaborative Detection for Fake News"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate",
    "sentencepiece",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "ddgs",
    "rank-bm25",
    "wikipedia",
    "beautifulsoup4",
    "curl-cffi",
    "sentence-transformers",
    "python-dotenv",
    "requests",
    "huggingface-hub",
]

[project.optional-dependencies]
vllm = ["vllm>=0.4"]
notebook = ["jupyter", "ipywidgets"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
